--- a/index.html
+++ b/index.html
@@ -15,9 +15,119 @@
         <input type="text" id="search" placeholder="Search for a Product,Brand or Category">
         <h4>My order</h1>
         <h4>Bag</h1>
-        <h4>SignIn</h1>
+        <!-- <h4 >SignIn</h1> -->
+        <a href="signup.html">SignIn</a>
     </div>
     <div class="mid">
+       <div class="cont">
+        <button><</button>
+        <div>
+            <img src="https://assetscdn1.paytm.com/images/catalog/view_item/710342/1620736738312.jpg?imwidth=140&impolicy=hq" alt="">
+            <p>Central</p>
+            </div>
+            <div>
+            <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498074/1613028372599.jpg?imwidth=140&impolicy=hq" alt="">
+            <p>Pantaloons</p>
+            </div>
+             <div>
+            <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498091/1620736830834.png?imwidth=140&impolicy=hq" alt="">
+            <p>U.S.Polo </p>
+             </div>
+            <div>
+            <img src="https://assetscdn1.paytm.com/images/catalog/view_item/994845/1643780245028.png?imwidth=140&impolicy=hq" alt="">
+             <p>Brand Factory</p>
+             </div>
+            <div>
+            <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498086/1610536486321.jpg?imwidth=140&impolicy=hq" alt="">
+            <p>Levi's</p>
+             </div>
+           <div>
+           <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498239/1620736478260.jpg?imwidth=140&impolicy=hq" alt="">
+           <p>Only</p>
+           </div>
+             <div>
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498254/1610536539307.jpg?imwidth=140&impolicy=hq" alt="">
+             <p>UCB</p>
+            </div>
+              <div>
+             <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498081/1583915454539.jpg?imwidth=140&impolicy=hq" alt="">
+            <p>BIBA</p>
+             </div>
+             <button>></button>
+       </div>
+       
+       <div class="cont">
+        <button><</button>
+        <div>
+            <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498530/1610537092744.png?imwidth=140&impolicy=hq" alt="">
+            <p>Iconic</p>
+            </div>
+            <div>
+            <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498114/1610537113386.jpg?imwidth=140&impolicy=hq" alt="">
+            <p>Raymonds</p>
+            </div>
+             <div>
+            <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498115/1610537339349.jpg?imwidth=140&impolicy=hq" alt="">
+            <p>Jockey</p>
+             </div>
+            <div>
+            <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498256/1620736733672.jpg?imwidth=140&impolicy=hq" alt="">
+             <p>Vero Mada</p>
+             </div>
+            <div>
+            <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498129/1613028463583.png?imwidth=140&impolicy=hq" alt="">
+            <p>Beverly Hills</p>
+             </div>
+           <div>
+           <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498127/1610537689405.png?imwidth=140&impolicy=hq" alt="">
+           <p>Madame</p>
+           </div>
+             <div>
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/710419/1610542731323.jpg?imwidth=140&impolicy=hq" alt="">
+             <p>Peter England</p>
+            </div>
+              <div>
+             <img src="https://assetscdn1.paytm.com/images/catalog/view_item/710420/1610543135214.jpg?imwidth=140&impolicy=hq" alt="">
+            <p>Van Heusen</p>
+             </div>
+             <button>></button>
+       </div>
+       <div class="cont">
+        <button><</button>
+        <div>
+            <img src="https://assetscdn1.paytm.com/images/catalog/view_item/995524/1643867277967.jpg?imwidth=140&impolicy=hq" alt="">
+            <p>Bata</p>
+            </div>
+            <div>
+            <img src="https://assetscdn1.paytm.com/images/catalog/view_item/995525/1643867496758.jpg?imwidth=140&impolicy=hq" alt="">
+            <p>Nike</p>
+            </div>
+             <div>
+            <img src="https://assetscdn1.paytm.com/images/catalog/view_item/995526/1643867362885.png?imwidth=140&impolicy=hq" alt="">
+            <p>Puma</p>
+             </div>
+            <div>
+            <img src="https://assetscdn1.paytm.com/images/catalog/view_item/995527/1643867532232.jpg?imwidth=140&impolicy=hq" alt="">
+             <p>Khadim's</p>
+             </div>
+            <div>
+            <img src="https://assetscdn1.paytm.com/images/catalog/view_item/995528/1643867625370.jpg?imwidth=140&impolicy=hq" alt="">
+            <p>Red Chief</p>
+             </div>
+           <div>
+           <img src="https://assetscdn1.paytm.com/images/catalog/view_item/710655/1643866806024.jpg?imwidth=140&impolicy=hq" alt="">
+           <p>Speedo</p>
+           </div>
+             <div>
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/995529/1643867506442.jpg?imwidth=140&impolicy=hq" alt="">
+             <p>Sports Station</p>
+            </div>
+              <div>
+             <img src="https://assetscdn1.paytm.com/images/catalog/view_item/995530/1643867664954.jpg?imwidth=140&impolicy=hq" alt="">
+            <p>Woodland</p>
+             </div>
+             <button>></button>
+       </div>
            
     </div>
     <div class="grocerry">
@@ -28,16 +138,16 @@
                 <h3>Big Bazar</h3>
             </div>
             <div>
-                <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498479/1613247367528.png?imwidth=414&impolicy=hq" alt="">
-                <h3>Big Bazar</h3>
+                <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498482/1620737072141.png?imwidth=414&impolicy=hq" alt="">
+                <h3>Urban Ladder</h3>
             </div>
             <div>
-                <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498479/1613247367528.png?imwidth=414&impolicy=hq" alt="">
-                <h3>Big Bazar</h3>
+                <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498480/1620737097910.jpg?imwidth=414&impolicy=hq" alt="">
+                <h3>@home</h3>
             </div>
             <div>
-                <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498479/1613247367528.png?imwidth=414&impolicy=hq" alt="">
-                <h3>Big Bazar</h3>
+                <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498484/1610566898069.jpg?imwidth=414&impolicy=hq" alt="">
+                <h3>More</h3>
             </div>
 
            </div>
@@ -46,20 +156,20 @@
         <h1>Jewellery Brands</h1>
         <div class="images1">
              <div>
-                <img src="https://assetscdn1.paytm.com/images/catalog/view_item/711194/1620745874093.jpg?imwidth=414&impolicy=hq" alt="">
-                <h3>Jewelfina</h3>
+                <img src="https://assetscdn1.paytm.com/images/catalog/view_item/711188/1613028659969.png?imwidth=414&impolicy=hq" alt="">
+                <h3>Kalyan | Get 20% Cashback</h3>
              </div>
              <div>
                 <img src="https://assetscdn1.paytm.com/images/catalog/view_item/711194/1620745874093.jpg?imwidth=414&impolicy=hq" alt="">
                 <h3>Jewelfina</h3>
              </div>
              <div>
-                <img src="https://assetscdn1.paytm.com/images/catalog/view_item/711194/1620745874093.jpg?imwidth=414&impolicy=hq" alt="">
-                <h3>Jewelfina</h3>
+                <img src="https://assetscdn1.paytm.com/images/catalog/view_item/711199/1613028660058.jpg?imwidth=414&impolicy=hq" alt="">
+                <h3>Tanishq</h3>
              </div>
              <div>
-                <img src="https://assetscdn1.paytm.com/images/catalog/view_item/711194/1620745874093.jpg?imwidth=414&impolicy=hq" alt="">
-                <h3>Jewelfina</h3>
+                <img src="https://assetscdn1.paytm.com/images/catalog/view_item/711200/1620745456365.jpg?imwidth=414&impolicy=hq" alt="">
+                <h3>Up to 16% Cashback</h3>
              </div>
         </div>
     </div>
