--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="formbox">
+        <a href="index.html">Home</a>
         <h1 id="tittle">Log-in</h1>
         <form >
             <div class="inpt-grp">
