--- a/signup.html
+++ b/signup.html
@@ -9,6 +9,11 @@
 </head>
 <body class="container">
     <div class="formbox">
+        <div class="anchor">
+            <a href="index.html">Home</a>
+            <a href="login.html">login</a>
+        </div>
+
         <h1 id="tittle">Sign-up</h1>
         <form >
             <div class="inpt-grp">
@@ -26,7 +31,7 @@
             <div class="but-fld">
                 <button type="button"  id="signupbtn"> Sign-up </button>
                 <!-- <button  type="button" id="signinbtn" class="btn2">Sign-In</button> -->
-                <a href="login.html">login</a>
+                
             </div>
         </form>
     </div>
