--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <div class="nav">
         <input type="text" id="catagery" placeholder="Shop by Category" >
         <input type="text" id="search" placeholder="Search for a Product,Brand or Category">
-        <h4>My order</h1>
-        <h4>Bag</h1>
+        <!-- <h4>My order</h1>
+        <h4>Bag</h1> -->
         <!-- <h4 >SignIn</h1> -->
-        <a href="signup.html">SignIn</a>
+         <a href="#">My Order</a>   
+         <a href="#">Bag</a>
+        <a href="signup.html">SignIn/Login</a>
     </div>
     <div class="mid">
        <div class="cont">
