--- a/index.html
+++ b/index.html
@@ -137,19 +137,21 @@
            <div class="images">
             <div>
                 <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498479/1613247367528.png?imwidth=414&impolicy=hq" alt="">
-                <h3>Big Bazar</h3>
+                <!-- <h3>Big Bazar</h3> -->
+                <a href="#">Big Bazar</a>
             </div>
             <div>
                 <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498482/1620737072141.png?imwidth=414&impolicy=hq" alt="">
-                <h3>Urban Ladder</h3>
+                <!-- <h3>Urban Ladder</h3> -->
+                <a href="#">Urban Ladder</a>
             </div>
             <div>
                 <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498480/1620737097910.jpg?imwidth=414&impolicy=hq" alt="">
-                <h3>@home</h3>
+                <a href="#">@home</a>
             </div>
             <div>
                 <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498484/1610566898069.jpg?imwidth=414&impolicy=hq" alt="">
-                <h3>More</h3>
+                <a href="#">More</a>
             </div>
 
            </div>
@@ -159,19 +161,23 @@
         <div class="images1">
              <div>
                 <img src="https://assetscdn1.paytm.com/images/catalog/view_item/711188/1613028659969.png?imwidth=414&impolicy=hq" alt="">
-                <h3>Kalyan | Get 20% Cashback</h3>
+                <!-- <h3>Kalyan | Get 20% Cashback</h3> -->
+                <a href="#">Kalyan | Get 20% Cashback</a>
              </div>
              <div>
                 <img src="https://assetscdn1.paytm.com/images/catalog/view_item/711194/1620745874093.jpg?imwidth=414&impolicy=hq" alt="">
-                <h3>Jewelfina</h3>
+                <!-- <h3>Jewelfina</h3> -->
+                <a href="#">Jewelfina</a>
              </div>
              <div>
                 <img src="https://assetscdn1.paytm.com/images/catalog/view_item/711199/1613028660058.jpg?imwidth=414&impolicy=hq" alt="">
-                <h3>Tanishq</h3>
+                <!-- <h3>Tanishq</h3> -->
+                <a href="#">Tanishq</a>
              </div>
              <div>
                 <img src="https://assetscdn1.paytm.com/images/catalog/view_item/711200/1620745456365.jpg?imwidth=414&impolicy=hq" alt="">
-                <h3>Up to 16% Cashback</h3>
+                <!-- <h3>Up to 16% Cashback</h3> -->
+                <a href="#">Up to 16% Cashback</a>
              </div>
         </div>
     </div>
