--- a/signup.html
+++ b/signup.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./CSS/signup.css">
 </head>
 <body class="container">
+   <div class="boooox">
     <div class="formbox">
         <div class="anchor">
             <a href="index.html">Home</a>
@@ -35,6 +36,10 @@
             </div>
         </form>
     </div>
+    <div>
+        <img src="./img/project logo.png" alt="">
+    </div>
+   </div>
    
 </body>
 </html>
