--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grand Store</title>
     <link rel="stylesheet" href="./CSS/home.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
         <!-- <h4>My order</h1>
         <h4>Bag</h1> -->
         <!-- <h4 >SignIn</h1> -->
-         <a href="#">My Order</a>   
+         <a href="products.html">My Products</a>   
          <a href="#">Bag</a>
         <a href="signup.html">SignIn/Login</a>
     </div>
